--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
 - pip3 install -r requirements.txt
 script:
 - docker --version
-# - docker build --tag patrowl-manager .
+# - docker build --tag secureflow-manager .
 - docker-compose up -d
 # - docker-compose up -f docker-compose.with-engines.yml
 - pytest
