--- a/app/settings.py.sample
+++ b/app/settings.py.sample
@@ -5,10 +5,10 @@ import datetime
 from datetime import timedelta
 
 with open("VERSION") as v_file:
-    PATROWL_VERSION = v_file.read()
+    SECUREFLOW_VERSION = v_file.read()
 
 # GUI update frequency (ms)
-PATROWL_REFRESH_ENGINE = int(os.environ.get('PATROWL_REFRESH_ENGINE', 7000))
+SECUREFLOW_REFRESH_ENGINE = int(os.environ.get('SECUREFLOW_REFRESH_ENGINE', 7000))
 
 # Build paths inside the project like this: os.path.join(BASE_DIR, ...)
 BASE_DIR = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
@@ -18,7 +18,7 @@ SECRET_KEY = os.environ.get('SECRET_KEY', '*** omg this is the secret !***')
 CSRF_COOKIE_SECURE = True
 CSRF_USE_SESSIONS = True
 
-SESSION_COOKIE_NAME = 'patrowl-manager-sc'
+SESSION_COOKIE_NAME = 'secureflow-manager-sc'
 
 #SESSION_COOKIE_SECURE = True # Only if HTTPS is enabled
 SESSION_COOKIE_HTTPONLY = True
@@ -44,8 +44,8 @@ LOGGING_LEVEL = os.environ.get('LOGGING_LEVEL', 'INFO,WARNING,ERROR,DEBUG')
 DATA_UPLOAD_MAX_NUMBER_FIELDS = 20240
 
 PROXIES = {
-    "http": os.environ.get('PATROWL_PROXY_HTTP', None),
-    "https": os.environ.get('PATROWL_PROXY_HTTPS', None)
+    "http": os.environ.get('SECUREFLOW_PROXY_HTTP', None),
+    "https": os.environ.get('SECUREFLOW_PROXY_HTTPS', None)
 }
 
 INTERNAL_IPS = ALLOWED_HOSTS
@@ -214,8 +214,8 @@ DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.postgresql_psycopg2',
         'NAME': os.environ.get('POSTGRES_DBNAME', 'patrowl_db'),
-        'USER': os.environ.get('POSTGRES_USER', 'PATROWL_DB_USER'),
-        'PASSWORD': os.environ.get('POSTGRES_PASSWORD', 'PATROWL_DB_PASSWD_TO_CHANGE'),
+        'USER': os.environ.get('POSTGRES_USER', 'SECUREFLOW_DB_USER'),
+        'PASSWORD': os.environ.get('POSTGRES_PASSWORD', 'SECUREFLOW_DB_PASSWD_TO_CHANGE'),
         'HOST': os.environ.get('POSTGRES_HOST', 'localhost'),
         'PORT': int(os.environ.get('POSTGRES_PORT', 5432)),
         'OPTIONS': {
@@ -248,7 +248,7 @@ AUTH_PASSWORD_VALIDATORS = [
 
 # Internationalization
 LANGUAGE_CODE = 'en-us'
-TIME_ZONE = os.environ.get('PATROWL_TZ', 'Europe/Paris')
+TIME_ZONE = os.environ.get('SECUREFLOW_TZ', 'Europe/Paris')
 USE_I18N = True
 USE_L10N = True
 USE_TZ = True
@@ -296,7 +296,7 @@ CELERY_RESULT_BACKEND = 'django-db'
 CELERY_ACCEPT_CONTENT = ['application/json']
 CELERY_TASK_SERIALIZER = 'json'
 CELERY_RESULT_SERIALIZER = 'json'
-CELERY_TIMEZONE = os.environ.get('PATROWL_TZ', 'Europe/Paris')
+CELERY_TIMEZONE = os.environ.get('SECUREFLOW_TZ', 'Europe/Paris')
 # CELERY_ENABLE_UTC = False
 # CELERY_IGNORE_RESULT = True
 # CELERY_TASK_IGNORE_RESULT = True
@@ -323,15 +323,15 @@ SUPERVISORD_API_URL = os.environ.get('SUPERVISORD_API_URL', 'http://localhost:90
 #SCAN_JOB_DEFAULT_MAX_TIMEOUT = int(os.environ.get('SCAN_JOB_DEFAULT_MAX_TIMEOUT', 600))
 SCAN_JOB_DEFAULT_TIMEOUT = int(os.environ.get('SCAN_JOB_DEFAULT_TIMEOUT', 7200))
 SCAN_JOB_DEFAULT_SPLIT_ASSETS = int(os.environ.get('SCAN_JOB_DEFAULT_SPLIT_ASSETS', 100))
-ASSETS_MAX = int(os.environ.get('PATROWL_ASSETS_MAX', 100000000))
-ASSETS_MARGIN = int(os.environ.get('PATROWL_ASSETS_MARGIN', 10))
-ASSETGROUPS_MAX = int(os.environ.get('PATROWL_ASSETGROUPS_MAX', 100000000))
-USERS_MAX = int(os.environ.get('PATROWL_USERS_MAX', 5))
-SCAN_DEFINITIONS_MAX = int(os.environ.get('PATROWL_SCAN_DEFINITIONS_MAX', 5))
-FINDINGS_MAX = int(os.environ.get('PATROWL_FINDINGS_MAX', -1))
-ENGINES_MAX = int(os.environ.get('PATROWL_ENGINES_MAX', 5))
-ENGINE_POLICIES_MAX = int(os.environ.get('PATROWL_ENGINE_POLICIES_MAX', 100))
-ENGINES_MANAGE_ENABLED = os.environ.get('PATROWL_ENGINES_MANAGE_ENABLED', 'true').lower() in ['true', '1', 'yes', 'y', 'on']
+ASSETS_MAX = int(os.environ.get('SECUREFLOW_ASSETS_MAX', 100000000))
+ASSETS_MARGIN = int(os.environ.get('SECUREFLOW_ASSETS_MARGIN', 10))
+ASSETGROUPS_MAX = int(os.environ.get('SECUREFLOW_ASSETGROUPS_MAX', 100000000))
+USERS_MAX = int(os.environ.get('SECUREFLOW_USERS_MAX', 5))
+SCAN_DEFINITIONS_MAX = int(os.environ.get('SECUREFLOW_SCAN_DEFINITIONS_MAX', 5))
+FINDINGS_MAX = int(os.environ.get('SECUREFLOW_FINDINGS_MAX', -1))
+ENGINES_MAX = int(os.environ.get('SECUREFLOW_ENGINES_MAX', 5))
+ENGINE_POLICIES_MAX = int(os.environ.get('SECUREFLOW_ENGINE_POLICIES_MAX', 100))
+ENGINES_MANAGE_ENABLED = os.environ.get('SECUREFLOW_ENGINES_MANAGE_ENABLED', 'true').lower() in ['true', '1', 'yes', 'y', 'on']
 ALERTS_AUTO_NEW_ENABLED = os.environ.get('ALERTS_AUTO_NEW_ENABLED', 'true').lower() in ['true', '1', 'yes', 'y', 'on']
 ALERTS_AUTO_MISSING_ENABLED = os.environ.get('ALERTS_AUTO_MISSING_ENABLED', 'true').lower() in ['true', '1', 'yes', 'y', 'on']
 
