--- a/docker-compose.with-engines.yml
+++ b/docker-compose.with-engines.yml
@@ -3,7 +3,7 @@ services:
 
   rabbitmq:
     image: rabbitmq:3-alpine
-    container_name: patrowl-rabbitmq
+    container_name: secureflow-rabbitmq
     environment:
       - RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS=-rabbit log_levels [{connection,error}]
     expose:
@@ -12,11 +12,11 @@ services:
   db:
     image: postgres:11-alpine
     restart: always
-    container_name: patrowl-postgres
+    container_name: secureflow-postgres
     environment:
       - POSTGRES_DB=patrowl_db
-      - POSTGRES_USER=PATROWL_DB_USER
-      - POSTGRES_PASSWORD=PATROWL_DB_PASSWD_TO_CHANGE
+      - POSTGRES_USER=SECUREFLOW_DB_USER
+      - POSTGRES_PASSWORD=SECUREFLOW_DB_PASSWD_TO_CHANGE
     expose:
       - '5432'
     volumes:
@@ -24,9 +24,9 @@ services:
     #   - ./pg_data:/var/lib/postgresql/data/
 
   web:
-    container_name: patrowl-django
+    container_name: secureflow-django
     build: .
-    image: patrowl/patrowl-manager-community-edition:${PATROWL_MANAGER_VERSION}
+    image: khulnasoft/secureflow-manager-community-edition:${SECUREFLOW_MANAGER_VERSION}
     environment:
       - POSTGRES_HOST=db
       - DEBUG=False
@@ -37,8 +37,8 @@ services:
     expose:
       - "8003"
     volumes:
-      - ./staticfiles:/opt/patrowl-manager/staticfiles
-      - ./media:/opt/patrowl-manager/media
+      - ./staticfiles:/opt/secureflow-manager/staticfiles
+      - ./media:/opt/secureflow-manager/media
     links:
       - db
       - rabbitmq
@@ -46,34 +46,34 @@ services:
 
   nginx:
     image: nginx:stable-alpine
-    container_name: patrowl-nginx
+    container_name: secureflow-nginx
     ports:
       - "8083:8083"
     volumes:
-      - ./staticfiles:/opt/patrowl-manager/staticfiles
-      # - ./media:/opt/patrowl-manager/media
-      - ./var/log:/opt/patrowl-manager/var/log
+      - ./staticfiles:/opt/secureflow-manager/staticfiles
+      # - ./media:/opt/secureflow-manager/media
+      - ./var/log:/opt/secureflow-manager/var/log
       - ./nginx_docker.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - web
 
   engine-nmap:
-    image: patrowl/engine-nmap
+    image: khulnasoft/engine-nmap
     restart: always
-    container_name: patrowl-nmap
+    container_name: secureflow-nmap
     expose:
       - '5001'
 
   engine-sslscan:
-    image: patrowl/engine-sslscan
+    image: khulnasoft/engine-sslscan
     restart: always
-    container_name: patrowl-sslscan
+    container_name: secureflow-sslscan
     expose:
       - '5014'
 
   engine-owl_dns:
-    image: patrowl/engine-owl_dns
+    image: khulnasoft/engine-owl_dns
     restart: always
-    container_name: patrowl-owl_dns
+    container_name: secureflow-owl_dns
     expose:
       - '5006'
