--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
     container_name: patrowlmanager-postgres
     environment:
       - POSTGRES_DB=patrowl_db
-      - POSTGRES_USER=PATROWL_DB_USER
-      - POSTGRES_PASSWORD=PATROWL_DB_PASSWD_TO_CHANGE
+      - POSTGRES_USER=SECUREFLOW_DB_USER
+      - POSTGRES_PASSWORD=SECUREFLOW_DB_PASSWD_TO_CHANGE
     expose:
       - '5432'
     volumes:
@@ -26,7 +26,7 @@ services:
   web:
     container_name: patrowlmanager-django
     build: .
-    image: patrowl/patrowl-manager-community-edition:${PATROWL_MANAGER_VERSION}
+    image: khulnasoft/secureflow-manager-community-edition:${SECUREFLOW_MANAGER_VERSION}
     environment:
       - POSTGRES_HOST=db
       - DEBUG=True
@@ -37,8 +37,8 @@ services:
     expose:
       - "8003"
     volumes:
-      - ./staticfiles:/opt/patrowl-manager/staticfiles
-      - ./media:/opt/patrowl-manager/media
+      - ./staticfiles:/opt/secureflow-manager/staticfiles
+      - ./media:/opt/secureflow-manager/media
     links:
       - db
       - rabbitmq
@@ -49,9 +49,9 @@ services:
     ports:
       - "8083:8083"
     volumes:
-      - ./staticfiles:/opt/patrowl-manager/staticfiles
-      # - ./media:/opt/patrowl-manager/media
-      - ./var/log:/opt/patrowl-manager/var/log
+      - ./staticfiles:/opt/secureflow-manager/staticfiles
+      # - ./media:/opt/secureflow-manager/media
+      - ./var/log:/opt/secureflow-manager/var/log
       - ./nginx_docker.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - web
